--- a/public/Kanbas/Courses/Settings/Navigation/index.html
+++ b/public/Kanbas/Courses/Settings/Navigation/index.html
@@ -18,54 +18,66 @@
         <table>
             <tr>
                 <td valign="top">
-                    <h2>Drag and drop items to reorder them in the course
-                        navigation.</h2>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Modules</a></li>
-                        <li><a href="#">Piazza</a></li>
-                        <li><a href="#">Zoom Meetings</a></li>
-                        <li><a href="#">Assignments</a></li>
-                        <li><a href="#">Quizzes</a></li>
-                        <li><a href="#">Grades</a></li>
-                        <li><a href="#">People</a></li>
-                        <li><a href="#">Panopto Video</a></li>
-                    </ul>
+                    <h2>Drag and drop items to reorder them in
+                        the course navigation.</h2>
+                    <table border="1" cellspacing="5">
+                        <tr><td><a href="#">Home</a></td></tr>
+                        <tr><td><a href="#">Modules</a></td></tr>
+                        <tr><td><a href="#">Piazza</a></td></tr>
+                        <tr><td><a href="#">Zoom Meetings</a></td></tr>
+                        <tr><td><a href="#">Assignments</a></td></tr>
+                        <tr><td><a href="#">Quizzes</a></td></tr>
+                        <tr><td><a href="#">Grades</a></td></tr>
+                        <tr><td><a href="#">People</a></td></tr>
+                        <tr><td><a href="#">Panopto Video</a></td></tr>
+                    </table>
                 </td>
             </tr>
             <tr>
                 <td valign="top">
-                    <h2>Drag items here to hide them from students</h2>
-                    <p>Disabling most pages will cause students to be redirected
-                        to the home page</p>
-                    <ul>
-                        <li><a href="#">Chat<br>Page disabled, won't appear in
-                                navigation</li></a><br>
-                        <li><a href="#">SCORM<br>Page disabled, won't appear in
-                                navigation</li></a><br>
-                        <li><a href="#">Attendance<br>Page disabled, won't
-                                appear in navigation</li></a><br>
-                        <li><a href="#">Barnes and Noble Bookstore<br>Page
+                    <h2>Drag items here to hide them from
+                        students</h2>
+                    <p>Disabling most pages will cause students
+                        to be redirected to the home page</p>
+                    <table border="1" cellspacing="5">
+                        <tr><td><a href="#">Chat<br>Page disabled, won't appear in navigation</a></td></tr>
+                                <tr><td><a href="#">SCORM<br>Page disabled,
+                                won't appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Attendance<br>Page
                                 disabled, won't appear in
-                                navigation</li></a><br>
-                        <li><a href="#">Digication<br>Page disabled, won't
-                                appear in navigation</li></a><br>
-                        <li><a href="#">Top Hat<br>Page disabled, won't appear
-                                in navigation</li></a><br>
-                        <li><a href="#">Syllabus<br>Page disabled, won't appear
-                                in navigation</li></a><br>
-                        <li><a href="#">Perusall<br>Page disabled, won't appear
-                                in navigation</li></a><br>
-                        <li><a href="#">MS Teams Meetings<br>Page disabled,
-                                won't appear in navigation</li></a><br>
-                        <li><a href="#">FACT Reporting and Photo Roster<br>Page
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Barnes and Noble
+                                Bookstore<br>Page disabled,
+                                won't appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Digication<br>Page
                                 disabled, won't appear in
-                                navigation</li></a><br>
-                        <li><a href="#">Gradescope 1.3<br>Page disabled, won't
-                                appear in navigation</li></a><br>
-                        <li><a href="#">Credentials<br>Page disabled, won't
-                                appear in navigation</li></a>
-                    </ul>
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Top Hat<br>Page
+                                disabled, won't appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Syllabus<br>Page
+                                disabled, won't appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Perusall<br>Page
+                                disabled, won't appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">MS Teams
+                                Meetings<br>Page disabled, won't
+                                appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">FACT Reporting and Photo
+                                Roster<br>Page disabled, won't
+                                appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Gradescope 1.3<br>Page
+                                disabled, won't appear in
+                                navigation</a></td></tr>
+                                <tr><td><a href="#">Credentials<br>Page
+                                disabled, won't appear in
+                                navigation</a></td></tr>
+                    </table>
                 </td>
             </tr>
         </table>
